[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "local_git_lfs"
version = "0.0.1"
authors = [
  { name="okdshin", email="kokuzen@gmail.com" },
]
description = "A local git lfs server implementation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
local-git-lfs-server = "local_git_lfs.main:serve"
